--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -12,7 +12,8 @@
     "@vanilla-extract/css": "^1.16.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
