--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.16.0",
+    "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
