--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@vanilla-extract/css": "^1.16.0",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7"
   },
