--- a/weather-app/tsconfig.json
+++ b/weather-app/tsconfig.json
@@ -16,6 +16,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/config.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/config.js"
+  ],
   "exclude": ["node_modules"]
 }
