--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -10,10 +10,13 @@
     "doc": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
     "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/sprinkles": "^1.6.3",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
@@ -28,8 +31,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/next-plugin": "^2.4.6",
-    "eslint": "^8.57.1",
+    "@vanilla-extract/recipes": "^0.5.5",
     "eslint-config-next": "14.2.15",
+    "eslint-import-resolver-typescript": "^3.8.3",
     "globals": "^15.11.0",
     "jsdoc": "^4.0.4",
     "prettier": "^3.3.3",
