--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
     "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/sprinkles": "^1.6.3",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -31,7 +33,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/next-plugin": "^2.4.6",
-    "@vanilla-extract/recipes": "^0.5.5",
     "eslint-config-next": "14.2.15",
     "eslint-import-resolver-typescript": "^3.8.3",
     "globals": "^15.11.0",
