--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -6,14 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "doc": "jsdoc -c jsdoc.json"
+    "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tanstack/react-query": "^5.59.16",
-    "@tanstack/react-query-devtools": "^5.59.16",
     "@vanilla-extract/css": "^1.16.0",
     "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/sprinkles": "^1.6.3",
@@ -23,8 +20,6 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
@@ -36,7 +31,6 @@
     "eslint-config-next": "14.2.15",
     "eslint-import-resolver-typescript": "^3.8.3",
     "globals": "^15.11.0",
-    "jsdoc": "^4.0.4",
     "prettier": "^3.3.3",
     "typescript": "^5",
     "typescript-eslint": "^8.8.1"
